--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,6 +40,7 @@
                 android:layout_width="@dimen/px90"
                 android:layout_height="@dimen/px90"
                 android:layout_centerInParent="true"
+                android:scaleType="centerCrop"
                 roundimg:oval="true"/>
 
         <ImageView
