--- a/app/src/main/res/layout/activity_material.xml
+++ b/app/src/main/res/layout/activity_material.xml
@@ -76,12 +76,51 @@
         <View style="@style/DividerHorizontal"/>
 
         <LinearLayout
+                android:id="@+id/lay_tips"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/px28"
+                android:background="#ebf0f7"
+                android:visibility="gone">
+
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/px16"
+                    android:src="@drawable/ic_tips"/>
+
+            <TextView
+                    android:id="@+id/tip_text_view"
+                    android:layout_weight="1"
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/px20"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:text="@string/lesson_creation_tips"
+                    android:textSize="@dimen/font_26px"
+                    android:textColor="@color/font_dark_gray"/>
+            <ImageView
+                    android:id="@+id/lesson_creation_tips_close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/px26"
+                    android:paddingRight="@dimen/px26"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:src="@drawable/ic_edit_text_del"/>
+        </LinearLayout>
+
+        <LinearLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/course_search_wrapper"
                 android:orientation="horizontal"
                 android:background="@color/white"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
 
             <cn.xiaojs.xma.ui.widget.EditTextDel
                     android:id="@+id/my_course_search"
