--- a/app/src/main/res/layout/layout_material_item.xml
+++ b/app/src/main/res/layout/layout_material_item.xml
@@ -27,7 +27,7 @@
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_arrow_down"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
 
         <LinearLayout
                 android:layout_toRightOf="@+id/material_item_image"
@@ -97,5 +97,18 @@
                 android:text="@string/share"
                 android:gravity="center"
                 android:layout_height="wrap_content"/>
+
+        <TextView
+                android:id="@+id/material_item_opera3"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:textColor="@color/common_text"
+                android:textSize="@dimen/font_26px"
+                android:drawableTop="@drawable/ic_delete"
+                android:text="@string/delete"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
     </LinearLayout>
 </LinearLayout>
