--- a/app/src/main/res/layout/layout_contact_group_child.xml
+++ b/app/src/main/res/layout/layout_contact_group_child.xml
@@ -6,6 +6,8 @@
         android:layout_height="@dimen/px100"
         swipe:show_mode="pull_out"
         swipe:drag_edge="right"
+        swipe:clickToClose="true"
+        android:id="@+id/root"
         >
 
     <LinearLayout
@@ -13,16 +15,16 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:gravity="center_vertical">
-        <!--<Button-->
-                <!--android:id="@+id/move_contact"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:textSize="@dimen/font_30px"-->
-                <!--android:textColor="@color/font_white"-->
-                <!--android:background="@drawable/big_submit_btn_selector"-->
-                <!--android:padding="8dp"-->
-                <!--android:text="@string/move_contact"-->
-                <!--/>-->
+        <Button
+                android:id="@+id/move_contact"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/font_30px"
+                android:textColor="@color/font_white"
+                android:background="@drawable/big_submit_btn_selector"
+                android:padding="8dp"
+                android:text="@string/move_contact"
+                />
         <Button
                 android:id="@+id/del_contact"
                 android:layout_width="wrap_content"
