--- a/app/src/main/res/layout/layout_talk_other_speaker_item.xml
+++ b/app/src/main/res/layout/layout_talk_other_speaker_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:roundimg="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/other_speaker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/px20"
