--- a/qrcode/src/main/res/values/dimens.xml
+++ b/qrcode/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_size_13sp">13dp</dimen>
     <dimen name="title_bar_height">54dp</dimen>
+
+    <dimen name="scan_offset">20dp</dimen>
+    <dimen name="scan_rect">200dp</dimen>
 </resources>
