--- a/app/src/main/res/layout/layout_classroom_panel_top.xml
+++ b/app/src/main/res/layout/layout_classroom_panel_top.xml
@@ -102,7 +102,8 @@
                 android:paddingTop="@dimen/px20"
                 android:paddingBottom="@dimen/px20"
                 android:layout_toLeftOf="@+id/setting_btn"
-                android:src="@drawable/ic_cr_notice"/>
+                android:src="@drawable/ic_cr_notice"
+                android:visibility="gone"/>
 
 
         <ImageView
